compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__panic__panic_as_function.snap
---
source: compiler-core/src/erlang/tests/panic.rs
expression: "\npub fn retstring() {\n  \"wibble\"\n}\npub fn main() {\n  panic as { retstring() <> \"wobble\" }\n}\n"
---
----- SOURCE CODE

pub fn retstring() {
  "wibble"
}
pub fn main() {
  panic as { retstring() <> "wobble" }
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([retstring/0, main/0]).

-spec retstring() -> binary().
retstring() ->
    ~"wibble".

-spec main() -> any().
main() ->
    erlang:error(#{
        gleam_error => panic,
        message => <<(retstring())/binary, "wobble"/utf8>>,
        file => ~"project/test/my/mod.gleam",
        module => ~"my/mod",
        function => ~"main",
        line => 6
    }).
