compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__panic__piped_chain.snap
---
source: compiler-core/src/erlang/tests/panic.rs
expression: "\n     pub fn main() {\n      \"lets\"\n      |> panic as \"pipe\"\n      |> panic as \"other panic\"\n    }\n    "
---
----- SOURCE CODE

     pub fn main() {
      "lets"
      |> panic as "pipe"
      |> panic as "other panic"
    }
    

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).

-spec main() -> any().
main() ->
    _pipe = ~"lets",
    _pipe@1 = (erlang:error(#{
        gleam_error => panic,
        message => ~"pipe",
        file => ~"project/test/my/mod.gleam",
        module => ~"my/mod",
        function => ~"main",
        line => 4
    }))(_pipe),
    (erlang:error(#{
        gleam_error => panic,
        message => ~"other panic",
        file => ~"project/test/my/mod.gleam",
        module => ~"my/mod",
        function => ~"main",
        line => 5
    }))(_pipe@1).
