compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__panic__plain.snap
---
source: compiler-core/src/erlang/tests/panic.rs
expression: "\npub fn main() {\n  panic\n}\n"
---
----- SOURCE CODE

pub fn main() {
  panic
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).

-spec main() -> any().
main() ->
    erlang:error(#{
        gleam_error => panic,
        message => ~"`panic` expression evaluated.",
        file => ~"project/test/my/mod.gleam",
        module => ~"my/mod",
        function => ~"main",
        line => 3
    }).
